# DropshippingPlatform

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE_MEMORY.md  Makefile  PROJECT_MEMORY.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20241201_0001_0001_create_tables.py  20241201_0002_0002_create_shop_scores_table.py  20241201_0003_0003_create_watchlists_tables.py  20241201_0004_0004_create_alerts_table.py  20241201_0005_0005_create_products_table.py  20241201_0006_0006_add_composite_indexes.py  20241201_0007_0007_create_page_daily_metrics_table.py  20241201_0008_0008_create_creative_analyses_table.py  20241203_0009_add_meta_page_id_to_pages.py
docker/: app.Dockerfile  frontend.Dockerfile
frontend/: .env.example  README.md  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/__tests__/app/: alerts.test.tsx  monitoring.test.tsx  watchlists.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/alerts/: page.tsx
frontend/app/monitoring/: page.tsx
frontend/app/pages/: page.tsx
frontend/app/search/: page.tsx
frontend/app/watchlists/: page.tsx
frontend/components/charts/: ScoreChart.tsx  index.ts
frontend/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx  index.ts
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  KpiTile.tsx  LoadingState.tsx  Select.tsx  Table.tsx  index.ts
frontend/lib/api/: client.ts  index.ts
frontend/lib/types/: api.ts  index.ts
mockserver/: server.py
scripts/: start.sh
src/app/: main.py
src/app/api/: __init__.py  dependencies.py  exceptions.py
tests/: conftest.py
tests/domain/: __init__.py  test_entities.py  test_value_objects.py
tests/integration/: conftest.py  test_api_admin.py  test_api_alerts.py  test_api_endpoints.py  test_api_pages_ranked.py  test_api_products_insights.py  test_api_watchlists.py  test_db_repositories.py  test_html_scraper.py  test_meta_ads_client.py  test_scoring_repository.py  test_scoring_repository_ranking.py  test_sitemap_client.py
tests/unit/adapters/: test_creative_text_analyzer.py
tests/usecases/: __init__.py  test_analyse_page_deep.py  test_analyse_website.py  test_build_product_insights.py  test_compute_page_active_ads_count.py  test_compute_shop_score.py  test_creative_insights.py  test_detect_alerts_for_page.py  test_extract_product_count.py  test_get_ranked_shops.py  test_metrics.py  test_search_ads_by_keyword.py  test_sync_products_for_page.py  test_watchlists_usecases.py
(+151 files in other folders)
