[project]
name = "dropshipping-platform"
version = "0.1.0"
description = "Dropshipping Platform - Meta Ads Intelligence"
requires-python = ">=3.11"
dependencies = [
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # HTTP clients
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # Resilience
    "tenacity>=8.2.0",
    # Configuration & Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Task queue
    "celery[redis]>=5.3.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",  # Required by FastAPI TestClient
    # Linting & Type checking
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    # Type stubs
    "types-beautifulsoup4>=4.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--maxfail=5",
    "--disable-warnings",
    "-v",
    "--cov=src/app/core",
    "--cov-report=term-missing",
    # Current: ~64%, Target: 85% (increase as more use case tests are added)
    "--cov-fail-under=60",
]
markers = [
    "asyncio: mark test as an asyncio coroutine",
    "integration: mark test as integration test requiring external services",
]

[tool.coverage.run]
source = ["src/app/core"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
]
